# node-raylib-ideas

./: .clang-format  .gitignore  CMakeLists.txt  README.md  index.js  package-lock.json  package.json
docs/: UPDATE.md
examples/: basic.js
src/: lib.c  vsprintf.js
test/: basic.test.js
tools/: gen.mjs  gen_c.mjs  gen_checklist.mjs  gen_js.mjs  postinstall.js  typeNames.json
